Sat Aug 12 23:16:05 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: build(): redirect stdout and stderr to /dev/null before
		       calling /bin/tar

Fri Aug 11 19:37:24 CEST 2006 (acab)
------------------------------------
  * libclamav: add support for SUE decryption (disabled)

Fri Aug 11 18:09:00 CEST 2006 (tk)
----------------------------------
  * libclamav/others.c: apply win32 support patch from NJH

Fri Aug 11 16:09:46 CEST 2006 (tk)
----------------------------------
  * libclamav/vba_extract.c: revert incorrect patch from Sat Aug  5 21:10:32

Fri Aug 11 15:49:24 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: improve target detection in --verify-cdiff

Wed Aug  9 14:09:34 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --list-sigs now supports incremental directories

Mon Aug  7 17:06:41 CEST 2006 (acab)
------------------------------------
  * libclamav/upx.c:    Fix heap overflow in pefromupx()
                        (discovered by Damian Put)

Sun Aug  6 18:32:04 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Guess the version information if daily.cvd doesn't
				exist

Sat Aug  5 21:10:32 CEST 2006 (tk)
----------------------------------
  * libclamav/vba_extract.c: add another Office 2000 signature
			     Thanks to Sergey Svishchev <svs*ropnet.ru>

Thu Aug  3 09:41:24 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Now builds on machines without resolv.h

Wed Aug  2 14:48:36 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Honour DetectPhishing in clamd.conf

Wed Aug  2 15:27:01 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: fix call to getcvd()

Tue Aug  1 17:58:32 BST 2006 (njh)
----------------------------------
  * shared/network.c:	Now honours clamav-config.h

Tue Aug  1 12:23:43 CEST 2006 (acab)
------------------------------------